apps/event-engine/k8s/03-kafka-connect-debezium.yml
apiVersion: v1
kind: Service
metadata:
  name: debezium-connect-api
  namespace: metric-watcher
spec:
  selector:
    app.kubernetes.io/name: kafka-connect
    app.kubernetes.io/instance: debezium-connect-cluster
  ports:
    - name: rest-api
      port: 8083
      targetPort: 8083
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: debezium-connect-nodeport
  namespace: metric-watcher
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kafka-connect
    app.kubernetes.io/instance: debezium-connect-cluster
  ports:
    - name: rest-api
      port: 8083
      targetPort: 8083
      nodePort: 30083
